# Health-Junction

./: .replit  HealthJunction.ipynb  README.md  app.py  pyproject.toml
attached_assets/: Pasted--1-Insights-from-Clinical-Notes-Description-A-5-month-old-boy-brought-by-his-parents-be-1744729039645.txt
pages/: 1_Data_Exploration.py  2_Text_Analysis.py  3_NLP_Pipeline.py  4_Named_Entity_Recognition.py  5_Topic_Modeling.py  6_Medical_Visualizations.py  7_Advanced_Visualizations.py  7_Medical_QA.py
utils/: data_loader.py  text_processor.py  visualizer.py
